--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -8,14 +8,15 @@
     <!-- TODO: Update blank fragment layout -->
 
     <TextView
+        android:id="@+id/LoginText"
         android:layout_width="120dp"
         android:layout_height="50dp"
-        android:layout_marginTop="300dp"
-        android:layout_marginStart="140dp"
+        android:layout_marginTop="110dp"
+        android:layout_marginStart="165dp"
         android:text="Please login." />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/LoginButton"
         android:layout_width="120dp"
         android:layout_height="50dp"
         android:layout_marginTop="400dp"
@@ -24,10 +25,27 @@
         android:text="Login" />
 
     <EditText
-        android:id="@+id/editTextTextPassword"
-        android:layout_width="365dp"
-        android:layout_height="207dp"
+        android:id="@+id/editTextUsername"
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="250dp"
+        android:autofillHints="username"
         android:ems="10"
-        android:inputType="textPassword" />
+        android:hint="Please enter a username."
+        android:inputType="text"
+        android:text="Username" />
+
+    <EditText
+        android:id="@+id/editTextPassword"
+        android:layout_marginTop="300dp"
+        android:layout_marginStart="50dp"
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:ems="10"
+        android:text="Password"
+        android:inputType="text"
+        android:autofillHints="password"
+        tools:ignore="LabelFor" />
 
 </FrameLayout>
