--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,45 +8,47 @@
 
     <!-- TODO: Update blank fragment layout -->
 
-    <TextView
-        android:id="@+id/LoginText"
-        android:layout_width="120dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="110dp"
-        android:layout_marginStart="165dp"
-        android:text="Please login." />
-
     <Button
         android:id="@+id/LoginButton"
         android:layout_width="120dp"
         android:layout_height="50dp"
-        android:layout_marginTop="400dp"
-        android:layout_marginStart="140dp"
+        android:layout_marginTop="44dp"
         android:backgroundTint="@android:color/holo_orange_dark"
-        android:text="Login" />
+        android:text="Login"
+        app:layout_constraintEnd_toEndOf="@+id/editTextUsername"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="@+id/editTextUsername"
+        app:layout_constraintTop_toBottomOf="@+id/editTextUsername"
+        tools:ignore="MissingConstraints" />
 
     <EditText
         android:id="@+id/editTextUsername"
         android:layout_width="300dp"
         android:layout_height="50dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="250dp"
         android:autofillHints="username"
         android:ems="10"
         android:hint="Please enter a username."
         android:inputType="text"
-        android:text="Username" />
+        android:text="Username"
+        app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
+        app:layout_constraintStart_toStartOf="@+id/editTextPassword"
+        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
+        tools:ignore="MissingConstraints" />
 
     <EditText
         android:id="@+id/editTextPassword"
-        android:layout_marginTop="300dp"
-        android:layout_marginStart="50dp"
         android:layout_width="300dp"
         android:layout_height="50dp"
-        android:ems="10"
-        android:text="Password"
-        android:inputType="text"
         android:autofillHints="password"
-        tools:ignore="LabelFor" />
+        android:ems="10"
+        android:inputType="text"
+        android:text="Password"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.500"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.400"
+        tools:ignore="LabelFor,MissingConstraints" />
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
