Got login to determine when valid user/pass was entered. Now need to make this switch fragments.

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -26,7 +26,7 @@
         android:layout_height="50dp"
         android:hint="Please enter a username."
         android:inputType="text"
-        android:text="Username"
+        android:text=""
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -39,8 +39,9 @@
         android:id="@+id/editTextPassword"
         android:layout_width="300dp"
         android:layout_height="50dp"
-        android:inputType="textPassword"
-        android:text="Password"
+        android:inputType="text"
+        android:hint="Please enter a password."
+        android:text=""
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/editTextUsername"
         app:layout_constraintHorizontal_bias="0.0"
