--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -24,7 +24,7 @@
         android:id="@+id/editTextUsername"
         android:layout_width="300dp"
         android:layout_height="50dp"
-        android:hint="Please enter a username."
+        android:hint="Username"
         android:inputType="text"
         android:text=""
         app:layout_constraintBottom_toBottomOf="parent"
@@ -40,7 +40,7 @@
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:inputType="text"
-        android:hint="Please enter a password."
+        android:hint="Password"
         android:text=""
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/editTextUsername"
