--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -35,9 +35,10 @@
         <TextView
             android:id="@+id/item_detail"
             android:layout_width="236dp"
-            android:layout_height="16dp"
+            android:layout_height="40dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
+            android:textSize="18sp"
             app:layout_constraintTop_toBottomOf="@id/item_title"
             app:layout_constraintLeft_toRightOf="@id/item_image"/>
 
