--- a/app/src/main/res/layout/activity_layout.xml
+++ b/app/src/main/res/layout/activity_layout.xml
@@ -8,6 +8,12 @@
     android:orientation="vertical"
     tools:context=".MainActivity" >
 
+    <Button
+        android:id="@+id/api_bttn_test"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="API Test" />
+
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/navFragment"
         android:name="androidx.navigation.fragment.NavHostFragment"
