--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -24,6 +24,7 @@
         android:id="@+id/editTextUsername"
         android:layout_width="300dp"
         android:layout_height="50dp"
+        android:autofillHints=""
         android:hint="Username"
         android:inputType="text"
         android:text=""
@@ -33,15 +34,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.4"
-        tools:ignore="HardcodedText,MissingConstraints"
-        android:autofillHints="" />
+        tools:ignore="HardcodedText,MissingConstraints" />
 
     <EditText
         android:id="@+id/editTextPassword"
         android:layout_width="300dp"
         android:layout_height="50dp"
-        android:inputType="textPassword"
+        android:autofillHints=""
         android:hint="Password"
+        android:inputType="textPassword"
         android:text=""
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/editTextUsername"
@@ -49,7 +50,20 @@
         app:layout_constraintStart_toStartOf="@+id/editTextUsername"
         app:layout_constraintTop_toBottomOf="@+id/editTextUsername"
         app:layout_constraintVertical_bias="0"
-        tools:ignore="HardcodedText,LabelFor,MissingConstraints"
-        android:autofillHints="" />
+        tools:ignore="HardcodedText,LabelFor,MissingConstraints" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="200dp"
+        android:visibility="invisible"
+        android:layout_height="wrap_content"
+        android:maxWidth="70dip"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.200" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
